--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
+edition = "2021"
 name = "jinxapi-github"
 version = "0.1.0"
-edition = "2021"
+authors = ["Jonathan Giddy"]
+description = "GitHub API client"
+categories = ["api-bindings"]
+keywords = ["github"]
+license = "Apache-2.0"
+repository = "https://github.com/jinxapi/github-rs"
 
 [features]
 default = ["hyper-client"]
