--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "jinxapi-github"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Jonathan Giddy"]
 description = "GitHub API client"
 categories = ["api-bindings"]
@@ -19,7 +19,7 @@ reqwest-async = ["reqwest", "authentic/reqwest_async"]
 reqwest-blocking = ["reqwest/blocking", "authentic/reqwest_blocking"]
 
 [dependencies]
-authentic = { version = "0.4", features = ["jwt"] }
+authentic = { version = "0.4.3", default-features = false, features = ["jwt"] }
 http = "0.2.6"
 hyper = { version = "0.14.17", features = ["client", "http1"], optional = true }
 log = "0.4.16"
